Fixed title not wrapping text

--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,7 @@ body {
     border-radius: 6px;
     border: inset 1.5px black;
     text-shadow: 0px -1px 0px rgb(255, 255, 255);
+    word-wrap: break-word;
 }
 
 .accordion:hover {
@@ -109,7 +110,7 @@ body {
     transition: 0.1s;
     border: inset 1.5px white;
     background-color: rgba(255, 255, 255, 0.95);
-
+    word-wrap: break-word;
 }
 
 .task-plus {
